[package]
name = "vchord-devtools"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.10.0" }
zerocopy = { version = "0.8.27", features = ["derive"] }
thiserror = "2.0.16"
byteorder = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.14", features = ["runtime"] }
futures = { version = "0.3.31", default-features = false }
whoami = "1.6.0"

[profile.release]
debug = "line-tables-only"
